--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,8 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- responsive desing -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
   <!--
