--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,8 @@
     <!-- responsive desing -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- font-awesone -->
+  <script src="https://kit.fontawesome.com/3226f53498.js" crossorigin="anonymous"></script>
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
