integrate responsive navi menu

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,11 +14,17 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- responsive desing -->
+  <!-- responsive desing -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- font-awesone -->
   <script src="https://kit.fontawesome.com/3226f53498.js" crossorigin="anonymous"></script>
+
+  <!-- font family poopins -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
