detail page update css

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
 
   <!-- font-awesone -->
   <script src="https://kit.fontawesome.com/3226f53498.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- font family poopins -->
 
